--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,21 +1,23 @@
 [versions]
-agp = "8.9.3"
+agp = "8.7.3"
 android-compileSdk = "36"
 android-minSdk = "24"
 android-targetSdk = "36"
-androidx-activity = "1.12.2"
-androidx-appcompat = "1.7.1"
-androidx-core = "1.17.0"
-androidx-espresso = "3.7.0"
-androidx-lifecycle = "2.9.6"
-compose-multiplatform = "1.7.3"
-kotlin = "2.2.20"
-kotlinx-coroutines = "1.10.2"
-compose-icons = "1.7.3"
-sqldelight = "2.2.1"
-koin = "4.1.1"
-accompanist = "0.34.0"
+androidx-activity = "1.10.0"
+androidx-appcompat = "1.7.0"
+androidx-core = "1.15.0"
+androidx-espresso = "3.6.1"
+androidx-lifecycle = "2.8.7"
+compose-multiplatform = "1.8.0"
+kotlin = "2.1.21"
+kotlinx-coroutines = "1.10.1"
+compose-icons = "1.8.0"
+sqldelight = "2.0.2"
+koin = "4.0.2"
+accompanist = "0.36.0"
 kotlinx-datetime = "0.6.1"
+whisper-jni = "1.7.1"
+ktor = "3.0.3"
 
 
 [libraries]
@@ -42,7 +44,7 @@ koin-compose = { module = "io.insert-koin:koin-compose", version.ref = "koin" }
 koin-compose-viewmodel = { module = "io.insert-koin:koin-compose-viewmodel", version.ref = "koin" }
 koin-android = { module = "io.insert-koin:koin-android", version.ref = "koin" }
 
-# Compose Multiplatform - explicit artifacts
+# Compose Multiplatform
 compose-runtime = { module = "org.jetbrains.compose.runtime:runtime", version.ref = "compose-multiplatform" }
 compose-foundation = { module = "org.jetbrains.compose.foundation:foundation", version.ref = "compose-multiplatform" }
 compose-ui = { module = "org.jetbrains.compose.ui:ui", version.ref = "compose-multiplatform" }
@@ -52,6 +54,14 @@ compose-material-icons-extended = { module = "org.jetbrains.compose.material:mat
 compose-material3 = { module = "org.jetbrains.compose.material3:material3", version.ref = "compose-multiplatform" }
 
 accompanist-permissions = { module = "com.google.accompanist:accompanist-permissions", version.ref = "accompanist" }
+
+# WhisperJNI for Desktop
+whisper-jni = { module = "io.github.givimad:whisper-jni", version.ref = "whisper-jni" }
+
+# Ktor for model downloading
+ktor-client-core = { module = "io.ktor:ktor-client-core", version.ref = "ktor" }
+ktor-client-okhttp = { module = "io.ktor:ktor-client-okhttp", version.ref = "ktor" }
+ktor-client-darwin = { module = "io.ktor:ktor-client-darwin", version.ref = "ktor" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
