Optimize Android Whisper.cpp integration with quantized models, JNI performance enhancements, and improved transcription accuracy.
This commit refines the Android STT engine by switching to quantized multilingual models for better accent support and faster inference, while also optimizing the native JNI bridge and audio processing pipeline:

- **STT Engine & Model Management**:
    - Updates `AndroidSpeechToTextEngine` to use quantized multilingual models (`ggml-base-q5_1.bin`, `ggml-small-q5_1.bin`) for improved performance and smaller download sizes.
    - Adds model file verification logic to detect and re-download corrupted or incomplete model files.
    - Implements basic text post-processing to handle capitalization, spacing, and punctuation.
    - Improves logging and error handling across the STT lifecycle.

- **Native JNI & C++ Enhancements**:
    - Refactors the JNI bridge to accept `FloatArray` samples directly, moving the PCM-to-float conversion from C++ to Kotlin for better transparency.
    - Optimizes transcription parameters: switches to `GREEDY` sampling, increases thread count to 4, and enables non-speech token suppression.
    - Updates `CMakeLists.txt` with ARM64-specific optimizations (`-march=armv8.2-a+fp16`) and release-build flags (`-O3`, `-flto`).
    - Compiles `whisper.cpp` and `ggml` directly as part of the JNI library for better control over build flags.
    - Adds `WhisperJni.getSystemInfo()` to retrieve native environment metadata for debugging.

- **Audio Processing**:
    - Refines PCM-to-float conversion (16-bit 16kHz mono) and adds validation to detect silent or extremely quiet audio input.
    - Ensures thread-safe native context management to prevent crashes during concurrent transcription or model switching.

- **Build Configuration**:
    - Enables R8 minification for the Android release build.
    - Retains 16KB page alignment for Android 15 compatibility.

--- a/composeApp/src/androidMain/cpp/CMakeLists.txt
+++ b/composeApp/src/androidMain/cpp/CMakeLists.txt
@@ -1,45 +1,74 @@
 cmake_minimum_required(VERSION 3.22.1)
 project(whisper_jni)
 
-# C++ standard
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-# Path to the whisper.cpp source
 set(WHISPER_CPP_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../../../../whisper-cpp-source")
 
-# Disable features we don't need for Android
-set(WHISPER_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
-set(WHISPER_BUILD_TESTS OFF CACHE BOOL "" FORCE)
-set(WHISPER_BUILD_SERVER OFF CACHE BOOL "" FORCE)
-set(GGML_OPENMP OFF CACHE BOOL "" FORCE)
-set(GGML_VULKAN OFF CACHE BOOL "" FORCE)
-set(GGML_CUDA OFF CACHE BOOL "" FORCE)
-set(GGML_METAL OFF CACHE BOOL "" FORCE)
-set(GGML_SYCL OFF CACHE BOOL "" FORCE)
-set(GGML_HIP OFF CACHE BOOL "" FORCE)
-set(BUILD_SHARED_LIBS OFF CACHE BOOL "" FORCE)
+# Extract whisper.cpp version from main CMakeLists.txt (like official example)
+file(READ "${WHISPER_CPP_DIR}/CMakeLists.txt" MAIN_CMAKE_CONTENT)
+string(REGEX MATCH "project\\(\"whisper\\.cpp\" VERSION ([0-9]+\\.[0-9]+\\.[0-9]+)\\)" VERSION_MATCH "${MAIN_CMAKE_CONTENT}")
+if(CMAKE_MATCH_1)
+    set(WHISPER_VERSION ${CMAKE_MATCH_1})
+else()
+    set(WHISPER_VERSION "unknown")
+endif()
+message(STATUS "Whisper version: ${WHISPER_VERSION}")
 
-# Use the whisper.cpp's own CMake build system
-add_subdirectory(${WHISPER_CPP_DIR} whisper_build)
-
-# Create the JNI shared library
-add_library(whisper_jni SHARED
+# Source files - compile whisper.cpp directly
+set(SOURCE_FILES
+        ${WHISPER_CPP_DIR}/src/whisper.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/whisper_jni.cpp
 )
 
+find_library(LOG_LIB log)
+
+include(FetchContent)
+
+# Build the JNI library
+add_library(whisper_jni SHARED ${SOURCE_FILES})
+
+# CRITICAL: Define GGML_USE_CPU and WHISPER_VERSION
+target_compile_definitions(whisper_jni PUBLIC GGML_USE_CPU)
+target_compile_definitions(whisper_jni PRIVATE WHISPER_VERSION="${WHISPER_VERSION}")
+
+# ARM64 optimizations for better performance
+if (${ANDROID_ABI} STREQUAL "arm64-v8a")
+    target_compile_options(whisper_jni PRIVATE -march=armv8.2-a+fp16)
+endif()
+
+# Release build optimizations
+if (NOT ${CMAKE_BUILD_TYPE} STREQUAL "Debug")
+    target_compile_options(whisper_jni PRIVATE -O3)
+    target_compile_options(whisper_jni PRIVATE -fvisibility=hidden -fvisibility-inlines-hidden)
+    target_compile_options(whisper_jni PRIVATE -ffunction-sections -fdata-sections)
+    target_link_options(whisper_jni PRIVATE -Wl,--gc-sections)
+    target_link_options(whisper_jni PRIVATE -Wl,--exclude-libs,ALL)
+    target_link_options(whisper_jni PRIVATE -flto)
+endif()
+
+# Fetch GGML from whisper.cpp source
+FetchContent_Declare(ggml SOURCE_DIR ${WHISPER_CPP_DIR}/ggml)
+FetchContent_MakeAvailable(ggml)
+
+# Apply same compile options to ggml
+if (${ANDROID_ABI} STREQUAL "arm64-v8a")
+    target_compile_options(ggml PRIVATE -march=armv8.2-a+fp16)
+endif()
+
+# Link libraries
+target_link_libraries(whisper_jni ${LOG_LIB} android ggml)
+
+# Include directories
 target_include_directories(whisper_jni PRIVATE
+        ${WHISPER_CPP_DIR}
+        ${WHISPER_CPP_DIR}/src
         ${WHISPER_CPP_DIR}/include
         ${WHISPER_CPP_DIR}/ggml/include
+        ${WHISPER_CPP_DIR}/ggml/src
+        ${WHISPER_CPP_DIR}/ggml/src/ggml-cpu
 )
 
-# Link against whisper (which includes ggml internally now)
-find_library(log-lib log)
-target_link_libraries(whisper_jni PRIVATE whisper ${log-lib})
-
-# -------------------------------------------
-# 16KB Page Alignment for Android 15+ (2025)
-# -------------------------------------------
-target_link_options(whisper_jni PRIVATE
-        "-Wl,-z,max-page-size=16384"
-)
+# 16KB page alignment for Android 15+
+target_link_options(whisper_jni PRIVATE "-Wl,-z,max-page-size=16384")
