Summarize the following diffs into a concise commit message:
```
Optimize Android Whisper.cpp integration with performance enhancements, battery-saving measures, and Material 3 Expressive UI updates.

This commit refines the core transcription engine and UI to improve efficiency and user experience:

- **Performance & Battery Optimization**:
    - Implements lazy initialization for `HttpClient` and `GeminiCleanupService` to reduce startup overhead.
    - Adds a periodic inactivity checker to unload the STT model after 5 minutes of idle time, freeing RAM and saving battery.
    - Pre-compiles regular expressions for text cleanup and optimizes audio processing with pre-sized buffers to avoid memory reallocations.
    - Configures Ktor with reduced connection pools and shorter timeouts for mobile efficiency.

- **STT Engine & Text Processing**:
    - Enhances the `AndroidSpeechToTextEngine` with a robust rule-based text cleanup pipeline (handling filler words, repeated phrases, and common STT errors).
    - Optimizes LLM cleanup by only triggering it for transcriptions exceeding a minimum character threshold.
    - Fixes issues with short recordings (<0.5s) and ensures transcription state is cleared on errors.

- **Material 3 Expressive UI**:
    - Overhauls the design system with vibrant color schemes, bolder typography, and more rounded shapes (e.g., `36.dp` for recording cards).
    - Enhances `RecordButton` with spring-based animations and a low-overhead pulse animation that only triggers during active listening.
    - Refines components (`HistoryCard`, `EmptyState`, `TopAppBar`) with better hierarchy, increased spacing, and rounded icons.

- **Architecture & Infrastructure**:
    - Deletes legacy `Platform` and `ModelManager` files in favor of unified platform-specific engine implementations.
    - Integrates Firebase Auth and RevenueCat dependencies for future authentication and monetization features.
    - Configures ProGuard/R8 rules to protect JNI native metho

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,6 +7,9 @@ androidx-activity = "1.10.0"
 androidx-appcompat = "1.7.0"
 androidx-core = "1.15.0"
 androidx-espresso = "3.6.1"
+firebase-bom = "33.7.0"
+play-services-auth = "21.2.0"
+revenuecat = "8.6.0"
 
 # Use JetBrains lifecycle 2.8.4 which matches Compose 1.8.x
 androidx-lifecycle = "2.8.4"
@@ -66,6 +69,13 @@ whisper-jni = { module = "io.github.givimad:whisper-jni", version.ref = "whisper
 ktor-client-core = { module = "io.ktor:ktor-client-core", version.ref = "ktor" }
 ktor-client-okhttp = { module = "io.ktor:ktor-client-okhttp", version.ref = "ktor" }
 ktor-client-darwin = { module = "io.ktor:ktor-client-darwin", version.ref = "ktor" }
+
+# Firebase
+firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebase-bom" }
+firebase-auth-ktx = { module = "com.google.firebase:firebase-auth-ktx" }
+play-services-auth = { module = "com.google.android.gms:play-services-auth", version.ref = "play-services-auth" }
+# RevenueCat
+revenuecat-purchases = { module = "com.revenuecat.purchases:purchases", version.ref = "revenuecat" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
