--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -25,6 +25,7 @@ accompanist = "0.36.0"
 kotlinx-datetime = "0.6.1"
 whisper-jni = "1.7.1"
 ktor = "3.0.3"
+credentials = "1.5.0"
 
 
 [libraries]
@@ -74,6 +75,12 @@ ktor-client-darwin = { module = "io.ktor:ktor-client-darwin", version.ref = "kto
 firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebase-bom" }
 firebase-auth-ktx = { module = "com.google.firebase:firebase-auth-ktx" }
 play-services-auth = { module = "com.google.android.gms:play-services-auth", version.ref = "play-services-auth" }
+
+# Credential Manager (new Google Sign-In)
+credentials = { module = "androidx.credentials:credentials", version.ref = "credentials" }
+credentials-play-services = { module = "androidx.credentials:credentials-play-services-auth", version.ref = "credentials" }
+
+googleid = { module = "com.google.android.libraries.identity.googleid:googleid", version = "1.1.1" }
 # RevenueCat
 revenuecat-purchases = { module = "com.revenuecat.purchases:purchases", version.ref = "revenuecat" }
 
