Implement unified access control, subscription management, and cloud-based transcription usage tracking for the v1 release.
This commit transitions the application from a prototype to a production-ready model by integrating Firebase Firestore for usage tracking and device restrictions, while simplifying the UI to focus on core transcription features.

- **Access & Usage Management**:
    - Introduces `AccessManager` to unify authentication, subscription status, and usage limits.
    - Implements `FirestoreManager` to track free trials (3 lifetime) and Pro tier usage (120 minutes/month) in Firebase.
    - Adds `DeviceManager` to enforce a one-active-device-per-account policy via unique device identifiers.
    - Defines a `UserData` domain model for Firestore synchronization, including monthly usage reset logic.

- **Architecture & ViewModel Refactoring**:
    - Simplifies `MainViewModel` and `MainUiState` by removing redundant UI states (onboarding, settings, complex dialogs).
    - Refactors the recording flow to validate access (login status, trials, or Pro minutes) before starting transcription.
    - Adds an `onTranscriptionComplete` callback to trigger usage tracking in Firestore.
    - Consolidates `TranscriptionMode` to "Standard" and "AI Polish" (Gemini-powered).

- **UI & UX Simplification**:
    - Refactors `MainScreen` to use inline `AlertDialog` components for edits and deletions, removing the dedicated `dialogs` package.
    - Removes the `SettingsScreen` and `OnboardingScreen` to streamline the v1 user experience.
    - Updates `VoDropTopBar` and `RecordingCard` to reflect current user status and remaining trials/minutes.
    - Improves error handling and status messaging across the primary transcription flow.

- **Infrastructure & Subscriptions**:
    - Updates `MainActivity` to orchestrate `AccessManager` and `FirebaseAuthManager` initialization.
    - Refines `SubscriptionManager` to focus on a single monthly Pro tier via RevenueCat.
    - Configures

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -29,6 +29,7 @@ credentials = "1.5.0"
 
 
 [libraries]
+firebase-firestore-ktx = { module = "com.google.firebase:firebase-firestore-ktx" }
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
 kotlinx-datetime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.ref = "kotlinx-datetime" }
 androidx-espresso-core = { module = "androidx.test.espresso:espresso-core", version.ref = "androidx-espresso" }
