Transition transcription and text cleanup logic to secure Firebase Cloud Functions and refactor the authentication layer.
This commit overhauls the app's backend integration by moving sensitive API keys (Groq, Gemini) to Firebase Cloud Functions and simplifying the authentication architecture to reduce state complexity.

- **Firebase Cloud Functions Implementation**:
    - Introduces `transcribe` and `cleanupText` cloud functions to handle speech-to-text and LLM processing on the backend.
    - Implements `FirebaseFunctionsService` across Android and JVM to call these functions via the Firebase SDK or REST.
    - Removes hardcoded API keys and configuration objects (`GroqConfig`, `LLMConfig`) from the client application.
    - Replaces local `GeminiCleanupService` and `GroqWhisperService` with a unified `FirebaseTextCleanupService`.

- **Authentication & Access Management**:
    - Consolidates the authentication layer by merging multiple manager classes into a streamlined `PlatformAuth` implementation.
    - Simplifies `AccessState` by removing redundant flows like `isPro` in favor of a single reactive flow.
    - Updates `PlatformAuth` on Android to handle Firestore connectivity issues gracefully with a 15-second timeout and default state fallback.
    - Updates the Google Sign-In `WEB_CLIENT_ID` configuration.

- **Speech-to-Text Engine Overhaul**:
    - Refactors `SpeechToTextEngine` on both Android and JVM to use cloud-based transcription.
    - Removes local `WhisperJNI` dependencies and model downloading logic on the JVM/Desktop platform.
    - Implements manual WAV file header construction for raw PCM data transmission to cloud endpoints.

- **Infrastructure & Dependencies**:
    - Adds `firebase-functions-ktx` to the Android build configuration.
    - Removes `whisper-jni` from the project dependencies.
    - Updates `.gitignore` to include Node.js/Functions build artifacts and secure configuration files.
    - Includes a session summary documentation for ar

--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,39 @@
+# IDE
 *.iml
 .kotlin
 .gradle
-**/build/
-xcuserdata
-!src/**/build/
-local.properties
 .idea
 .DS_Store
+
+# Build output
+**/build/
+!src/**/build/
+
+# Local config
+local.properties
 captures
+
+# Native
 .externalNativeBuild
 .cxx
+
+# iOS
+xcuserdata
 *.xcodeproj/*
 !*.xcodeproj/project.pbxproj
 !*.xcodeproj/xcshareddata/
 !*.xcodeproj/project.xcworkspace/
 !*.xcworkspace/contents.xcworkspacedata
 **/xcshareddata/WorkspaceSettings.xcsettings
+
+# Node/Functions
 node_modules/
+functions/lib/
+
+# Sensitive - IMPORTANT!
+composeApp/google-services.json
+
+# Built artifacts
+*.apk
+*.aab
+*.log
