Switch from a direct Groq-based transcription flow to a more robust, Google Cloud Speech-on-Device (Chirp) architecture and enhance recording lifecycle management.
This commit introduces a major refactor of the transcription pipeline, moving away from base64-encoded requests to a storage-based batch processing flow using Google Cloud's Chirp model. It also improves the recording UX with the ability to cancel sessions and adds foundational support for recording metrics.

- **Transcription Architecture**:
    - Replaces the Groq Whisper implementation with `transcribeChirp`, a Firebase Cloud Function using the `@google-cloud/speech` (Chirp 2.1) library.
    - Implements a storage-first flow: Android client uploads audio to Firebase Storage, then passes the GCS URI to the Cloud Function for lightweight processing.
    - Configures transcription to use the `asia-south1` (Mumbai) endpoint for lower latency and regional compliance.
    - Updates Gemini cleanup logic to use the `gemini-3-flash-preview` model with refined temperature and token settings.

- **Audio Recording Enhancements**:
    - Introduces `cancelRecording()` to the `AudioRecorder` interface and Android implementation to stop recording and discard data without processing.
    - Updates `MainViewModel` with a cancellation flow that resets the UI state, timer, and visualizer amplitudes.
    - Extends `MainUiState` to include `recordingDurationSeconds` and `currentAmplitude` for future visualizer and timer UI support.

- **Android & Dependency Updates**:
    - Adds `firebase-storage-ktx` to the Android app and `FirebaseStorage` to the DI graph.
    - Updates `SpeechToTextEngine.android.kt` to handle the new upload-and-transcribe lifecycle, including file cleanup after processing.
    - Adds `fs-extra` and `@google-cloud/speech` dependencies to the Firebase Functions environment.

- **UI Improvements**:
    - Streamlines `RecordingCard` by removing redundant mode indicators, focusing the UI on the recording act

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -74,6 +74,7 @@ firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "fir
 firebase-auth-ktx = { module = "com.google.firebase:firebase-auth-ktx" }
 play-services-auth = { module = "com.google.android.gms:play-services-auth", version.ref = "play-services-auth" }
 firebase-functions-ktx = { module = "com.google.firebase:firebase-functions-ktx" }
+firebase-storage-ktx = {module = "com.google.firebase:firebase-storage-ktx"}
 
 # Credential Manager (new Google Sign-In)
 credentials = { module = "androidx.credentials:credentials", version.ref = "credentials" }
