--- a/functions/package.json
+++ b/functions/package.json
@@ -15,9 +15,11 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "@google-cloud/speech": "^7.2.1",
     "firebase-admin": "^13.6.0",
     "firebase-functions": "^7.0.0",
     "form-data": "^4.0.5",
+    "fs-extra": "^11.3.3",
     "node-fetch": "^2.7.0"
   },
   "devDependencies": {
