Implement background audio recording on Android, simplify the speech-to-text engine interface, and refine the UI with a unified microphone state model.
This commit introduces a foreground service for Android to support persistent recording and streamlines the state management by replacing complex phase enums with a unified `MicPhase` sealed interface.

- **Background Recording (Android)**:
    - Introduces `RecordingService`, a foreground service with `microphone` type to allow audio capture while the app is in the background.
    - Updates `AndroidAudioRecorder` to manage the lifecycle of the recording service.
    - Configures `AndroidManifest.xml` with required foreground service and notification permissions.
    - Adjusts sample rate handling to ensure consistency during WAV file creation for cloud transcription.

- **Unified State & Architecture**:
    - Replaces `RecordingPhase` with a sealed `MicPhase` (Idle, Recording, Processing, Error) to simplify UI logic and error handling.
    - Refactors `MainViewModel` to remove unnecessary dependencies on `sttEngine` states, centralizing transcription logic within the `transcribeUseCase`.
    - Simplifies `SpeechToTextEngine` interface by removing initialization and lifecycle methods, focusing strictly on the `transcribe` function.
    - Updates `MainUiState` to reactively derive error messages from the current `MicPhase`.

- **UI & Component Enhancements**:
    - **Main Screen**: Refines the `TopAppBar` with a more prominent title design and replaces manual drawer state syncing with a simplified `HardwareBackHandler`.
    - **Record Button**: Introduces a `SimpleWaveform` animation using the Compose `Canvas` to provide visual feedback during recording.
    - **Recording Card**: Refactors to use the new `MicPhase` and improves layout consistency for error states and processing messages.
    - **Navigation**: Implements a cross-platform `HardwareBackHandler` abstraction to manage back navigation (e.g., closing the dra

--- a/composeApp/src/androidMain/AndroidManifest.xml
+++ b/composeApp/src/androidMain/AndroidManifest.xml
@@ -5,6 +5,11 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
+    <!-- Foreground Service permissions -->
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_MICROPHONE" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -12,15 +17,22 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@android:style/Theme.Material.Light.NoActionBar">
+
         <activity
             android:exported="true"
             android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
-
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
+        <!-- Recording service with explicit foregroundServiceType -->
+        <service
+            android:name=".service.RecordingService"
+            android:exported="false"
+            android:foregroundServiceType="microphone" />
+
     </application>
 
 </manifest>
