Implement a unified application state architecture and refactor the recording flow to use a single source of truth across the UI, business logic, and Android foreground service.
This commit introduces a shared `AppState` interface to centralize recording, processing, and success states. It significantly simplifies state management by making `RecordingSessionManager` the sole orchestrator, eliminating redundant state translations in the ViewModel and race conditions between the audio recorder and the foreground service.

- **Unified State Architecture**:
    - Introduces `AppState` sealed interface (Ready, Recording, Processing, Success, Error) in `commonMain` as the Single Source of Truth.
    - Refactors `RecordingSessionManager` to hold and update the unified `AppState`, orchestrating the recorder, transcription use case, and service lifecycle.
    - Simplifies `MainViewModel` to a thin layer that exposes `AppState` directly to the UI without mapping logic.
    - Removes `RecordingStatus` and `MicPhase` in favor of the unified `AppState`.

- **Android Service & Notification Refactoring**:
    - Introduces `ServiceController` abstraction to handle platform-specific foreground service control (Android implementation vs. JVM/iOS stubs).
    - Refactors `RecordingService` into a "pure observer" that only updates the notification UI based on the shared `AppState`.
    - Implements `RecordingCommandReceiver` to handle notification button actions (Stop, Cancel, Copy) via broadcasts, decoupling the Service from business logic.
    - Updates `RecordingService` notification actions to include a "Cancel" option and improves the "Copy" flow using a dedicated receiver.

- **Audio & Data Layer Enhancements**:
    - Simplifies `AudioRecorder` implementations (Android, JVM, iOS) to be stateless byte recorders that no longer expose internal status flows.
    - Refactors `TranscriptionRepository` to handle its own validation and timestamp generation, simplifying the `TranscribeAudi

--- a/composeApp/src/androidMain/AndroidManifest.xml
+++ b/composeApp/src/androidMain/AndroidManifest.xml
@@ -34,6 +34,17 @@
             android:exported="false"
             android:foregroundServiceType="microphone" />
 
+        <!-- BroadcastReceiver for notification button actions -->
+        <receiver
+            android:name=".service.RecordingCommandReceiver"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.liftley.vodrop.ACTION_STOP" />
+                <action android:name="com.liftley.vodrop.ACTION_CANCEL" />
+                <action android:name="com.liftley.vodrop.ACTION_COPY" />
+            </intent-filter>
+        </receiver>
+
     </application>
 
 </manifest>
