Implement dual-text (Original and AI Polished) transcription support and introduce a bottom-sheet-based mode selection UI.
This commit enhances the core transcription experience by allowing users to switch between raw STT output and AI-polished versions, while also improving the main interface with a more accessible transcription mode selector.

- **Dual-Text Transcription Support**:
    - Updates `Transcription` domain model and SQL schema to store both `originalText` and `polishedText`.
    - Refactors `TranscriptionRepository` and `TranscribeAudioUseCase` to handle the generation and storage of both text versions.
    - Implements specialized update methods (`updateOriginalText`, `updatePolishedText`) to allow manual edits to either version.

- **Transcription UI & History Enhancements**:
    - Introduces a tabbed `HistoryCard` using `FilterChip`s to toggle between "Original" and "Polished" views.
    - Adds an "AI Polish" button to history items that haven't been processed yet and a "Re-polish with AI" option for existing ones.
    - Updates `MainScreen` editing logic to support editing the specific version currently being viewed.
    - Integrates `animateContentSize` in `HistoryCard` for smooth transitions when switching between text versions.

- **Transcription Mode Selection**:
    - Replaces the legacy inline mode toggle with a `TranscriptionModeSheet` (Modal Bottom Sheet).
    - Refines the `CenterAlignedTopAppBar` with a clickable "VoDrop" pill that displays the active mode and triggers the selection sheet.
    - Updates `MainViewModel` and `MainUiState` to manage bottom sheet visibility and selection logic.

- **Android Infrastructure**:
    - Adds `ACTION_START` to the `RecordingCommandReceiver` in the manifest to support external recording triggers.
    - Updates baseline profiles and release artifacts.

- **General Refinement**:
    - Renames `onCopy` to `onCopyAndReset` in `RecordingCard` to ensure UI state is cleared after a successful clipboard oper

--- a/composeApp/src/androidMain/AndroidManifest.xml
+++ b/composeApp/src/androidMain/AndroidManifest.xml
@@ -39,6 +39,7 @@
             android:name=".service.RecordingCommandReceiver"
             android:exported="false">
             <intent-filter>
+                <action android:name="com.liftley.vodrop.ACTION_START" />
                 <action android:name="com.liftley.vodrop.ACTION_STOP" />
                 <action android:name="com.liftley.vodrop.ACTION_CANCEL" />
                 <action android:name="com.liftley.vodrop.ACTION_COPY" />
