Update Firebase dependencies, simplify ProGuard rules, and refine Android configuration for better production stability.
This commit modernizes the project's dependency management by updating the Firebase BOM and switching to non-KTX libraries where applicable. It also streamlines the ProGuard configuration to focus on essential serialization and database rules while improving the Android manifest for better Google Play Services compatibility.

- **Dependency Updates**:
    - Updates `firebase-bom` from `33.7.0` to `34.8.0`.
    - Updates `google-services` plugin from version `4.4.2` to `4.4.4`.
    - Migrates Firebase library references (`auth`, `functions`, `storage`) from legacy KTX modules to standard modules in both `libs.versions.toml` and `build.gradle.kts`.
    - Removes unused dependencies including `androidx-appcompat`, `androidx-core`, `androidx-espresso-core`, and `firebase-firestore-ktx`.

- **ProGuard Optimization**:
    - Simplifies `proguard-rules.pro` by removing redundant core Android rules and broad Firebase/GMS keep rules.
    - Explicitly protects `kotlinx.serialization` `@SerialName` fields and SQLDelight database classes.
    - Refines `-dontwarn` suppressions for `okhttp3` and `conscrypt`.

- **Android Configuration**:
    - Updates `AndroidManifest.xml` with a `<queries>` block for `com.google.android.gms` and the ads identifier service to ensure compatibility on modern Android versions.
    - Standardizes formatting and attribute ordering for the `MainActivity` declaration.

--- a/composeApp/src/androidMain/AndroidManifest.xml
+++ b/composeApp/src/androidMain/AndroidManifest.xml
@@ -20,11 +20,11 @@
         android:theme="@android:style/Theme.Material.Light.NoActionBar">
 
         <activity
-            android:exported="true"
-            android:name=".MainActivity">
+            android:name=".MainActivity"
+            android:exported="true">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
@@ -47,5 +47,12 @@
         </receiver>
 
     </application>
+
+    <queries>
+        <package android:name="com.google.android.gms" />
+        <intent>
+            <action android:name="com.google.android.gms.ads.identifier.service.START" />
+        </intent>
+    </queries>
 
 </manifest>
